Fix gh-cover-image z-index

--- a/assets/css/blog/article.css
+++ b/assets/css/blog/article.css
@@ -86,7 +86,7 @@
     object-fit: cover;
     transition: transform 1.5s ease;
     transform: scale(1);
-    z-index: 1;
+    z-index: -1;
 }
 
 .post-template .gh-cover.loading .gh-cover-image {
